--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ locale:       "zh-CN"
 # About/contact
 author:
   name:       RedsXi
-  url:        http://gihub.com/redsxi 
+  url:        http://github.com/redsxi 
 
 # Gems
 gems:
